# simple_sim_2mats

./: CMakeLists.txt  README.md  package.xml
launch/: 2mats.launch  2matsBB.launch  2matsBR.launch  2matsBR10.launch  2matsBR50.launch  2mats_paper.launch  random_objects.launch
map/: 2mats.yaml  2matsBB.yaml  2matsBR.yaml  2mats_paper.yaml
robot/: differential.yaml
scripts/: place_random_10.py  place_random_50.py  place_random_object.py
